--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
       "target":"ES2015",  // 어떤 버젼의 JS 로 컴파일 되고 싶은지 적기 
       "sourceMap":true, // sourcemap 처리하고 싶은지 
   },
+  "strict": true,
   // 어떤 파일들이 컴파일 과정에 포함되는지 TypeScript에게 알려주기 
   // include : 컴파일 과정에 포함할 파일의 배열 적기 <-> exclude
   "include":["index.ts"],
